# lv2cairo

./: CMakeLists.txt  LICENSE  README.md  Todo.txt  install-test-plugin.sh  install.sh  install_deps.sh  package-lock.json
src/: CMakeLists.txt
src/download_test_plugin/: CMakeLists.txt  Lv2Plugin.cpp  RecordPlugin.cpp  RecordPlugin.hpp  RecordPluginUi.cpp  SamplePluginUi.cpp
src/download_test_plugin/ttl/: manifest.ttl.in  plugin.ttl.in
src/generate_lv2c_plugin_info/: AutoLilvNode.hpp  CMakeLists.txt  ClassFileWriter.cpp  ClassFileWriter.hpp  LilvPiPedalUI.cpp  LilvPiPedalUI.hpp  LilvPluginInfo.cpp  LilvPluginInfo.hpp  main.cpp
src/generate_lvtk_plugin_info/: AutoLilvNode.cpp  AutoLilvNode.hpp  CMakeLists.txt  ClassFileWriter.cpp  ClassFileWriter.hpp  CommandLineParser.hpp  LilvPiPedalUI.cpp  LilvPiPedalUI.hpp  LilvPluginInfo.cpp  LilvPluginInfo.hpp  main.cpp  ss.hpp
src/lv2_plugin/: CMakeLists.txt  Lv2Plugin.cpp
src/lv2_plugin/include/lv2_plugin/: Lv2Plugin.hpp  Lv2Ports.hpp
src/lv2c/: CMakeLists.txt  IcuString.cpp  JsonIo.cpp  JsonVariant.cpp  Lv2cAnimator.cpp  Lv2cBindingProperty.cpp  Lv2cButtonBaseElement.cpp  Lv2cButtonElement.cpp  Lv2cCieColors.cpp  Lv2cContainerElement.cpp  Lv2cDamageList.cpp  Lv2cDbVuElement.cpp  Lv2cDialBaseElement.cpp  Lv2cDialElement.cpp  Lv2cDialog.cpp  Lv2cDrawingContext.cpp  Lv2cDropShadowElement.cpp  Lv2cDropdownElement.cpp  Lv2cDropdownItemElement.cpp  Lv2cEditBoxElement.cpp  Lv2cElement.cpp  Lv2cFlexGridElement.cpp  Lv2cGroupElement.cpp  Lv2cIndefiniteProgressElement.cpp  Lv2cLampElement.cpp  Lv2cLog.cpp  Lv2cMarkdownElement.cpp  Lv2cMessageDialog.cpp  Lv2cMotionBlurElement.cpp  Lv2cNumericEditBoxElement.cpp  Lv2cPangoContext.cpp  Lv2cPngDialElement.cpp  Lv2cPngElement.cpp  Lv2cPngStripElement.cpp  Lv2cProgressElement.cpp  Lv2cRootElement.cpp  Lv2cScrollBarElement.cpp  Lv2cScrollContainerElement.cpp  Lv2cSettingsFile.cpp  Lv2cSlideInOutAnimationElement.cpp  (+20 more)
src/lv2c/include/lv2c/: IcuString.hpp  JsonIo.hpp  JsonVariant.hpp  Lv2c.hpp  Lv2cAnimator.hpp  Lv2cBindingProperty.hpp  Lv2cButtonBaseElement.hpp  Lv2cButtonElement.hpp  Lv2cCieColors.hpp  Lv2cContainerElement.hpp  Lv2cDamageList.hpp  Lv2cDbVuElement.hpp  Lv2cDialBaseElement.hpp  Lv2cDialElement.hpp  Lv2cDialog.hpp  Lv2cDrawingContext.hpp  Lv2cDropShadowElement.hpp  Lv2cDropdownElement.hpp  Lv2cDropdownItemElement.hpp  Lv2cEditBoxElement.hpp  Lv2cElement.hpp  Lv2cFlexGridElement.hpp  Lv2cGroupElement.hpp  Lv2cHorizontalStackElement.hpp  Lv2cIndefiniteProgressElement.hpp  Lv2cLampElement.hpp  Lv2cLog.hpp  Lv2cMarkdownElement.hpp  Lv2cMessageDialog.hpp  Lv2cMotionBlurElement.hpp  Lv2cNumericEditBoxElement.hpp  Lv2cObject.hpp  Lv2cOnOffSwitchElement.hpp  Lv2cPangoContext.hpp  Lv2cPngDialElement.hpp  Lv2cPngElement.hpp  Lv2cPngStripElement.hpp  Lv2cProgressElement.hpp  Lv2cRootElement.hpp  Lv2cScrollBarElement.hpp  (+17 more)
src/lv2c_ui/: CMakeLists.txt  GlobMatcher.cpp  Lv2FileDialog.cpp  Lv2FileElement.cpp  Lv2FrequencyPlotElement.cpp  Lv2PluginInfo.cpp  Lv2PluginType.cpp  Lv2PortView.cpp  Lv2PortViewController.cpp  Lv2PortViewFactory.cpp  Lv2TextOutputElement.cpp  Lv2TunerElement.cpp  Lv2UI.cpp  Lv2UI_glue.cpp  Lv2Units.cpp  MimeTypes.cpp  PiPedalUI.cpp  Uri.cpp  UriHelper.cpp
src/lv2c_ui/include/lv2c_ui/: GlobMatcher.hpp  Lv2ControlConstants.hpp  Lv2Exception.hpp  Lv2FileDialog.hpp  Lv2FileElement.hpp  Lv2FrequencyPlotElement.hpp  Lv2MomentaryButtonElement.hpp  Lv2PluginInfo.hpp  Lv2PluginType.hpp  Lv2PortView.hpp  Lv2PortViewController.hpp  Lv2PortViewFactory.hpp  Lv2TextOutputElement.hpp  Lv2TunerElement.hpp  Lv2UI.hpp  Lv2UI_NativeCallbacks.hpp  Lv2Units.hpp  MimeTypes.hpp  PiPedalUI.hpp  PiPedalUiDefs.h
src/lvtk/: CMakeLists.txt  IcuString.cpp  JsonIo.cpp  JsonVariant.cpp  LvtkAnimator.cpp  LvtkBindingProperty.cpp  LvtkButtonBaseElement.cpp  LvtkButtonElement.cpp  LvtkCieColors.cpp  LvtkContainerElement.cpp  LvtkDamageList.cpp  LvtkDbVuElement.cpp  LvtkDialBaseElement.cpp  LvtkDialElement.cpp  LvtkDialog.cpp  LvtkDrawingContext.cpp  LvtkDropShadowElement.cpp  LvtkDropdownElement.cpp  LvtkDropdownItemElement.cpp  LvtkEditBoxElement.cpp  LvtkElement.cpp  LvtkFlexGridElement.cpp  LvtkGroupElement.cpp  LvtkIndefiniteProgressElement.cpp  LvtkLampElement.cpp  LvtkLog.cpp  LvtkMarkdownElement.cpp  LvtkMessageDialog.cpp  LvtkMotionBlurElement.cpp  LvtkNumericEditBoxElement.cpp  LvtkPangoContext.cpp  LvtkPngDialElement.cpp  LvtkPngElement.cpp  LvtkPngStripElement.cpp  LvtkRootElement.cpp  LvtkScrollBarElement.cpp  LvtkScrollContainerElement.cpp  LvtkSettingsFile.cpp  LvtkSlideInOutAnimationElement.cpp  LvtkStatusTextElement.cpp  (+19 more)
src/lvtk/include/lvtk/: IcuString.hpp  JsonIo.hpp  JsonVariant.hpp  Lvtk.hpp  LvtkAnimator.hpp  LvtkBindingProperty.hpp  LvtkButtonElement.hpp  (+49 more)
src/lvtk_ui/: CMakeLists.txt  GlobMatcher.cpp  Lv2FileDialog.cpp  Lv2FileElement.cpp  Lv2FrequencyPlotElement.cpp  Lv2PluginInfo.cpp  Lv2PluginType.cpp  Lv2PortView.cpp  Lv2PortViewController.cpp  Lv2PortViewFactory.cpp  Lv2TunerElement.cpp  Lv2UI.cpp  Lv2UI_glue.cpp  Lv2Units.cpp  MimeTypes.cpp  PiPedalUI.cpp  Uri.cpp  Uri.hpp  UriHelper.cpp
src/test/: BindingTest.cpp  ButtonTestPage.cpp  ButtonTestPage.hpp  CMakeLists.txt  CapitalizationTest.cpp  CatchTest.hpp  ColorTest.cpp  DamageListTest.cpp  DialTestPage.cpp  DialTestPage.hpp  DropShadowTestPage.cpp  DropShadowTestPage.hpp  DropdownTestPage.cpp  DropdownTestPage.hpp  EditBoxTestPage.cpp  EditBoxTestPage.hpp  FlexGridTestPage.cpp  FlexGridTestPage.hpp  JsonTest.cpp  Lv2ControlTestPage.cpp  Lv2ControlTestPage.hpp  Lv2UiTestPage.cpp  Lv2UiTestPage.hpp  Lv2cTestMain.cpp  LvtkMinimumMain.cpp  LvtkTestMain.cpp  MaterialColorTest.cpp  MotionBlurTestPage.cpp  MotionBlurTestPage.hpp  NiceEditStringTest.cpp  PaletteTestPage.cpp  PaletteTestPage.hpp  PngTestPage.cpp  PngTestPage.hpp  SamplePluginInfo.hpp  ScrollBarTestPage.cpp  ScrollBarTestPage.hpp  StandardDialogTestPage.cpp  StandardDialogTestPage.hpp  SvgTestPage.cpp  (+14 more)
src/test_plugin/: CMakeLists.txt  Lv2Plugin.cpp  Lv2Plugin.hpp  SamplePlugin.cpp  SamplePlugin.hpp  SamplePluginUi.cpp
src/test_plugin/ttl/: plugin.ttl.in
(+61 files in other folders)
